--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-type-animation": "^2.1.2",
     "tailwindcss": "^3.2.7",
     "web-vitals": "^2.1.0"
   },
